--- a/question/level-1_Science/level1_sci_critical_thinking4.html
+++ b/question/level-1_Science/level1_sci_critical_thinking4.html
@@ -735,8 +735,8 @@
   }
 ];
 </script>
-    <script src="../../../js/script.js"></script>
-    <script src="../../../js/partials.js"></script>
+    <script src="../../js/script.js"></script>
+    <script src="../../js/partials.js"></script>
     <script>
       window.addEventListener("DOMContentLoaded", () => {
     initMCQQuiz(questions);
