--- a/question/level-1_Science/level1_sci_critical_thinking4.html
+++ b/question/level-1_Science/level1_sci_critical_thinking4.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     …
-    <link rel="stylesheet" href="../../../css/question.css" />
+    <link rel="stylesheet" href="../../css/question.css" />
   </head>
   <body>
     <div id="site-header-placeholder"></div>
