--- a/start-page2/Level 1/Level1_science_options.html
+++ b/start-page2/Level 1/Level1_science_options.html
@@ -150,28 +150,28 @@
     </div>
 
     <!-- 18 -->
-    <!-- <div class="card" data-level="18">
+    <div class="card" data-level="18">
       <div class="card-icon">C</div>
       <h3 class="card-title">Critical Thinking 2</h3>
       <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_critical_thinking2.html" class="card-btn">Start</a>
-    </div> -->
+    </div>
 
     <!-- 19 -->
-    <!-- <div class="card" data-level="19">
+    <div class="card" data-level="19">
       <div class="card-icon">C</div>
       <h3 class="card-title">Critical Thinking 3</h3>
       <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_critical_thinking3.html" class="card-btn">Start</a>
-    </div> -->
+    </div>
 
     <!-- 20 -->
-    <!-- <div class="card" data-level="20">
+    <div class="card" data-level="20">
       <div class="card-icon">C</div>
       <h3 class="card-title">Critical Thinking 4</h3>
       <p class="card-desc"></p>
       <a href="../../question/level-1_Science/level1_sci_critical_thinking4.html" class="card-btn">Start</a>
-    </div> -->
+    </div>
   </div>
 </main>
 
